# email_assistant

./: .gitignore  QWEN.md  README.md  config.json  pyproject.toml  requirements.txt  run.py  start-dev.bat  start-dev.sh  start.bat
design/: ui.html
frontend/: forge.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/electron/: main.cjs  main.js  preload.js  preload.mjs
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/pages/: EmailSender.jsx  EmailSummary.jsx  KnowledgeBase.jsx  Settings.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
src/email_assistant/: __init__.py  ai_processor.py  config.py  email_extract.py  email_processor.py  email_sender.py  log_config.py  main.py  models.py  templates.py  type.py
tests/: test_ai_processor.py  test_email_calendar.py  test_email_fetch.py  test_email_processor.py
